# claude-tap

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_zh.md  SECURITY.md  WS_VERIFY_REPORT.md  docker-compose.yml  pyproject.toml
.agents/skills/: playwright-screen-recording.md
.claude/: CLAUDE.md
.claude/skills/: demo-video.md  js-in-html-testing.md  playwright-screen-recording.md  real-e2e-test.md
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: chore.md  docs.md  feature.md  fix.md  plan.md  refactor.md  test.md
.github/workflows/: auto-release.yml  ci.yml  claude-tap-acr.yaml  publish.yml
claude_tap/: __init__.py  certs.py  claw_session.py  cli.py  cluster_identity.py  cursor_transcript.py  export.py  forward_proxy.py  gateway_llm.py  gateway_upstream.py  health.py  live.py  proxy.py  session_dispatcher.py  session_index.py  sse.py  trace.py  upstream_config.py  viewer.html  viewer.py
docs/: claw-tap-gateway-mode.md  claw-tap-gateway-mode.zh.md  deploy-compose.md  support-matrix.md
docs/evidence/pr73/: README.md
docs/examples/: upstream-config.json
docs/guides/: OPENCLAW_README.md  engineering-practices.md  new-client-integration-playbook.md  viewer-ux-rationale.md
docs/plans/: 2026-02-27-codex-support-handoff.md  2026-02-27-codex-support-plan.md  2026-02-27-viewer-sticky-e2e-workflow.md  2026-02-28-codex-websocket-support.md
docs/recordings/: codex-demo.cast  record_viewer.py
docs/standards/: README.md  coding-and-runtime.md  e2e-and-evidence.md  hard-rules.md  validation-and-gates.md  workflow-and-review.md
scripts/: README.md  check_changelog.py  check_pr.sh  check_screenshots.sh  run_real_e2e.sh  run_real_e2e_tmux.sh  translate_i18n.py
tests/: conftest.py  tap_cli.py  test_bedrock_viewer.py  test_check_pr_script.py  test_claw_session_and_dispatcher.py  test_cluster_identity.py  test_cursor_launch.py  test_diff_matching.py  test_e2e.py  test_export.py  test_gateway_llm_cluster.py  test_gateway_upstream_auth.py  test_healthz.py  test_live_prefix_path.py  test_nav_browser.py  test_responses_browser.py  test_search_browser.py  test_translate_i18n.py  test_upstream_config.py  test_windows_compat.py  test_ws_proxy.py
tests/e2e/: README.md  conftest.py  test_real_proxy.py
(+26 files in other folders)
